--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
     "prettier": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
