--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
+    "formik": "^2.4.6",
     "prettier": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
