Add functionality to edit button

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "formik": "^2.4.6",
+    "framer-motion": "^11.2.12",
     "prettier": "^3.3.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
