--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.23.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^5.5.2",
     "vite": "^4.1.0"
