--- a/.github/workflows/restart_nginx.yml
+++ b/.github/workflows/restart_nginx.yml
@@ -19,7 +19,8 @@ jobs:
       - name: Add remote host to known_hosts
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan $REMOTE_HOST >> ~/.ssh/known_hosts
+          # ssh-keyscan $REMOTE_HOST >> ~/.ssh/known_hosts
+          ssh-keyscan -H -t rsa $REMOTE_HOST  >> ~/.ssh/known_hosts
 
       - name: Restart Nginx
         run: |
