--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
-          node-version: 12
+          node-version: 22
       - run: npm ci
       - run: npm run build
       
@@ -30,11 +30,10 @@ jobs:
           REMOTE_DIR: /var/www/html
         run: |
           mkdir -p ~/.ssh
-          # ssh-keyscan $REMOTE_HOST >> ~/.ssh/known_hosts
           ssh-keyscan -H -t rsa $REMOTE_HOST  >> ~/.ssh/known_hosts
           
       - name: Copy files via SCP
         run: |
-          scp -r ./build/* $REMOTE_USER@$REMOTE_HOST:$REMOTE_DIR
+          scp -r ./dist/* $REMOTE_USER@$REMOTE_HOST:$REMOTE_DIR
         env:
           SSH_KEY: ${{ secrets.GITKEY }}
