--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,10 +30,11 @@ jobs:
           REMOTE_DIR: /var/www/html
         run: |
           mkdir -p ~/.ssh
-          ssh-keyscan -H -t rsa ${{ REMOTE_HOST }}  >> ~/.ssh/known_hosts
+          ssh-keyscan -H -t rsa $REMOTE_HOST  >> ~/.ssh/known_hosts
           
       - name: Copy files via SCP
         run: |
-          scp -r ./dist/* ${{ REMOTE_USER }}@${{ REMOTE_HOST }}:${{ REMOTE_DIR }}
+          echo "$REMOTE_USER $REMOTE_HOST $REMOTE_DIR"
+          scp -r ./dist/* $REMOTE_USER@$REMOTE_HOST:$REMOTE_DIR
         env:
           SSH_KEY: ${{ secrets.GITKEY }}
