Replace hardcoded variables with env

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,8 +33,7 @@ jobs:
           ssh-keyscan -H -t rsa $REMOTE_HOST  >> ~/.ssh/known_hosts
 
       - name: Env test
-        run: |
-          echo "$REMOTE_USER $REMOTE_HOST $REMOTE_DIR"
+        run: echo "Testing $REMOTE_USER $REMOTE_HOST $REMOTE_DIR"
           
       - name: Copy files via SCP
         run: |
